<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E82E2E"
    tools:context=".ui.SplashScreen">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_mail"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:src="@drawable/ic_baseline_mail_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_mail"
        app:layout_constraintVertical_bias="0.24000001">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_list"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chatting_list"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid_list"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>