<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/person_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_person_pin_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_sender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/sender" />

            <TextView
                android:id="@+id/txt_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="#505050"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/txt_sender"
                tools:text="@string/global_warming" />

            <TextView
                android:id="@+id/txt_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="#505050"
                android:layout_margin="@dimen/small_padding"
                android:textSize="@dimen/body_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/txt_subject"
                tools:text="@string/global_warming" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="10"
                android:textColor="#0040FF"
                android:textSize="@dimen/body_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/time" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_favourite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/small_padding"
                android:src="@drawable/ic_baseline_reply_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_time" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />




</androidx.constraintlayout.widget.ConstraintLayout>